# sr-international

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml
public/styles/: app.css
src/: api.rs  main.rs
styles/: global.css
templates/: business.html  calculator.html  contact.html  financing.html  index.html  savings_report.html
templates/layouts/: base.html  footer.html  header.html
templates/partials/: report_sent.html  savings_result.html
