[package]
name = "sr-international"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
dotenvy = "0.15.7"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
sqlx = {version = "0.9.0", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate"]}
tokio = {version = "1.52.3", features = ["full"]}
tower-http = {version = "0.6.11", features = ["fs"]}

[general]
# Directories to search for templates, relative to the crate root.
dirs = ["templates"]
# Unless you add a `-` in a block, whitespace characters won't be trimmed.
whitespace = "preserve"
